fixed tick alignment

--- a/Savings-Goal-Calculator/style.css
+++ b/Savings-Goal-Calculator/style.css
@@ -6,11 +6,16 @@
   justify-content: center;
   height: 100vh;
 } */
+option {
+  display: flex;
+
+  width: 100%;
+}
 datalist {
   display: flex;
   justify-content: space-evenly;
   flex-direction: row;
   align-items: stretch;
-  color: red;
-  width: 100%;
+  color: green;
+  width: 120%;
 }
